<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Configuracao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMudarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMudarEmail" />

        <Button
            android:id="@+id/btnMudarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMudarSenha" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff0000"
            android:text="@string/btnSair" />
    </LinearLayout>
</FrameLayout>