<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPagamento">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblCartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCard"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtCartao"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblNomeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNomeCard"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNomeCard"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblCodSeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCodSeg"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtCodSeg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblValidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblValid"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txtValidade"
                    android:layout_width="195dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblBandeira"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblBandeira"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txtBandeira"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnConfirm"
            tools:text="@string/btnConfirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>