<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalheProd">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProd"
                android:layout_width="match_parent"
                android:layout_height="217dp"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/lblNomeProd"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textAlignment="center"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/lblDescript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDesc"
                android:textColor="#819FF7"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/lblDesc"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/lblDataValid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblValid"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/lblQtd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/lblQtd"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="409dp"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPreco"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPreco"
                    android:textColor="#D41212"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_gravity="right"
                    android:text="@string/btnAdd" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>