<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MudarSenha">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblNovaSenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNovaSenha"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNovaSenha2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/lblConfNovaSenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblConfNovaSenha"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtConfNovaSenha2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnConfirm2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="btnCocluirOnClick"
            android:text="@string/btnConfirm"
            tools:text="@string/btnConfirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>